--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,28 @@
     tools:context="com.ronstruempf.ronstruempfgreeter.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <EditText
+        android:id="@+id/greet_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:inputType="textCapSentences"/>
+
+    <Button
+        android:id="@+id/greet_button"
+        android:text="@string/greet_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_below="@+id/greet_edit_text"
+        android:layout_centerHorizontal="true"
+        android:onClick="greenButtonClicked" />
+
+    <TextView
+        android:id="@+id/message_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/greet_button"
+        android:gravity="center"
+        android:textSize="30sp"/>
+
 </RelativeLayout>
