--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,4 +36,13 @@
         android:gravity="center"
         android:textSize="30sp"/>
 
+    <Button
+        android:id="@+id/reverse_button"
+        android:text="@string/reverse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/message_text_view"
+        android:layout_centerHorizontal="true"
+        android:onClick="reverseButtonClicked" />
+
 </RelativeLayout>
