--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/message_text_view"
         android:layout_centerHorizontal="true"
+        android:enabled="false"
         android:onClick="reverseButtonClicked" />
 
 </RelativeLayout>
