--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/greet_edit_text"
         android:layout_centerHorizontal="true"
-        android:onClick="greenButtonClicked" />
+        android:onClick="greetButtonClicked" />
 
     <TextView
         android:id="@+id/message_text_view"
